--- a/templates/api.html
+++ b/templates/api.html
@@ -12,7 +12,7 @@
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 SwaggerUIBundle({
-                    url: '../modules/api.json',
+                    url: './modules/api.json',
                     dom_id: '#basic',
                     displayOperationId: true,
                     displayRequestDuration: true,
